# gargantua

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh
mcp-servers/dpa/: server.py
mcp-servers/zabbix/: .env.example  server.py
src/gargantua/: __init__.py  __main__.py  admin.py  bootstrap.py  catalog_seed.py  cli_admin.py  main.py  mcp_cache.py  mcp_tools.py  observability.py  registry.py  rotation.py  secrets.py  settings.py  templates.py
src/gargantua/api/: __init__.py  admin.py  agent_os.py  auth.py  me.py  runs.py  schemas.py
src/gargantua/auth/: __init__.py  deps.py  jwt.py  password.py  tokens.py
src/gargantua/db/: __init__.py  base.py  models.py  session.py
src/gargantua/db/migrations/: env.py
src/gargantua/db/migrations/versions/: 0001_initial_schema.py  0002_user_is_active.py  0003_agno_schema.py
src/gargantua/repo/: __init__.py  agents.py  audit.py  mcp_child_resources.py  mcp_server_types.py  mcp_servers.py  teams.py  users.py
src/gargantua/seeds/agents/: api-explorer.md  argocd-operator.md  db-investigator.md  dpa-analyst.md  kubernetes-operator.md  logs-explorer.md  triage-lead.md  zabbix-monitor.md
tests/: conftest.py  test_admin_cli.py  test_auth_deps.py  test_auth_tokens.py  test_db_models.py  test_db_session.py  test_jwt.py  test_main.py  test_mcp_cache.py  test_mcp_tools.py  test_observability.py  test_password.py  test_registry.py  test_secrets.py  test_settings.py  test_templates.py
tests/integration/: conftest.py  test_admin_agent_templates.py  test_admin_agents.py  test_admin_audit.py  test_admin_mcp_cache.py  test_admin_mcp_child_resources.py  test_admin_mcp_servers.py  test_admin_mcp_types.py  test_admin_teams.py  test_admin_users.py  test_agent_os_gates.py  test_agent_runs.py  test_app_e2e.py  test_auth_routes.py  test_bootstrap.py  test_cli_admin.py  test_db_session.py  test_lifecycle.py  test_me_listings.py  test_migration.py  test_repo_agents.py  test_repo_audit.py  test_repo_mcp_child_resources.py  test_repo_mcp_servers.py  test_repo_mcp_types.py  test_repo_teams.py  test_repo_users.py  test_rotate_kek.py  test_seed_catalog.py  test_team_runs.py
ui/: .env.example  .eslintignore  .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/admin/: layout.tsx  page.tsx
ui/app/admin/agent-templates/: page.tsx
ui/app/admin/agent-templates/view/: page.tsx
ui/app/admin/agents/: page.tsx
ui/app/admin/agents/edit/: page.tsx
ui/app/admin/agents/new/: page.tsx
ui/app/admin/audit/: page.tsx
ui/app/admin/catalog/: page.tsx
ui/app/admin/catalog/edit/: page.tsx
ui/app/admin/catalog/new/: page.tsx
ui/app/admin/mcp-cache/: page.tsx
ui/app/admin/mcp-servers/: page.tsx
ui/app/admin/mcp-servers/edit/: page.tsx
ui/app/admin/mcp-servers/new/: page.tsx
ui/app/admin/teams/: page.tsx
ui/app/admin/teams/edit/: page.tsx
ui/app/admin/teams/new/: page.tsx
ui/app/admin/users/: page.tsx
ui/app/chat/: page.tsx
ui/app/chat/agent/: page.tsx
ui/app/chat/team/: page.tsx
ui/app/login/: page.tsx
ui/components/: Providers.tsx  RouteGuard.tsx
ui/components/admin/: AdminSidebar.tsx  AdminTopBar.tsx  AgentForm.tsx  CatalogForm.tsx  ChildResourcePanel.tsx  ConfirmDialog.tsx  DataTable.tsx  ErrorBlock.tsx  JSONField.tsx  MultiSelect.tsx  OrderedMultiSelect.tsx  PageHeader.tsx  SecretField.tsx  ServerForm.tsx  TeamForm.tsx
ui/components/chat/: ChatSurface.tsx  Composer.tsx  MessageBubble.tsx  MessageThread.tsx  ToolCallCard.tsx
ui/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  FieldError.tsx  Input.tsx  Label.tsx  Select.tsx  Spinner.tsx  Tabs.tsx  Textarea.tsx
ui/e2e/: admin.spec.ts  chat.spec.ts  login.spec.ts
ui/lib/: format.ts  utils.ts
ui/lib/api/: client.ts  endpoints.ts  types.generated.ts  types.ts
ui/lib/api/hooks/: queryKeys.ts  useAgents.ts  useAudit.ts  useCatalog.ts  useMcpCache.ts  usePicker.ts  useServers.ts  useTeams.ts  useUsers.ts
ui/lib/auth/: context.tsx  storage.ts
ui/lib/chat/: events.ts  sse.ts  state.ts
ui/tests/: setup.ts
ui/tests/api/: client.test.ts
ui/tests/auth/: storage.test.ts
ui/tests/chat/: Composer.test.tsx  MessageBubble.test.tsx  ToolCallCard.test.tsx  sse.test.ts  state.test.ts
ui/tests/components/: DataTable.test.tsx  JSONField.test.tsx  OrderedMultiSelect.test.tsx  SecretField.test.tsx
ui/tests/lib/: format.test.ts
