[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gargantua"
version = "0.1.0"
description = "Operator-grade control plane for MCP-powered agents: DB-first agents, teams, and MCP servers with encrypted secrets, RBAC, and audit."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ishrath", email = "ishrathahamed0@gmail.com" }]

dependencies = [
    # Agent runtime
    "agno==2.6.9",
    "mcp>=1.27.1",

    # Model provider SDKs (Agno re-exports model-as-string against these).
    # Only the active provider is exercised at runtime; the rest are unused
    # imports that load lazily, so the install cost is one-shot.
    "openai>=2.38.0",
    "google-genai>=2.6.0",
    "groq>=1.2.0",
    "anthropic>=0.104.1",

    # Web framework + ASGI
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "python-multipart>=0.0.29",      # OAuth2PasswordRequestForm

    # Auth
    "argon2-cffi>=25.1.0",
    "PyJWT[crypto]>=2.13.0",

    # Secrets at rest (AES-256-GCM)
    "cryptography>=48.0.0",

    # Database (Postgres only — Agno's PostgresDb + our own SQLAlchemy models)
    "sqlalchemy[asyncio]>=2.0.50",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",

    # Settings / runtime
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",

    # Observability — Arize Phoenix tracing via OpenInference.  Optional at
    # runtime: the tracer is only registered when PHOENIX_COLLECTOR_ENDPOINT
    # is set (see gargantua.observability), so an unconfigured deployment
    # pays nothing but the import cost.  ``arize-phoenix-otel`` is the
    # lightweight client (just phoenix.otel.register) — not the full
    # Phoenix server — and the openinference package is what auto_instrument
    # hooks into to patch Agno's Agent/Team.
    "arize-phoenix-otel>=0.6.0",
    "openinference-instrumentation-agno>=0.1.0",

    # Misc utilities
    "aiohttp>=3.13.5",
    "pyyaml>=6.0.3",
    "typer>=0.25.1",                 # admin CLI; 0.16+ fixes Click 8.2 compat
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12.20260518",
]

[project.scripts]
gargantua-admin = "gargantua.admin:app"

# ---------------------------------------------------------------------------
# Hatchling package layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/gargantua"]

[tool.hatch.build.targets.sdist]
include = ["src/gargantua", "README.md", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "RUF",              # ruff-specific
    "ASYNC",            # async best practices
]
ignore = [
    "E501",             # line-length handled by formatter
]

[tool.ruff.lint.flake8-bugbear]
# These callables return immutable sentinels by design in FastAPI / typer /
# Pydantic and are idiomatic in argument defaults; B008 is a false positive
# for them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
    "typer.Option",
    "typer.Argument",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B008",   # FastAPI/typer Depends/Option pattern, common in test fixtures
    "B017",   # pytest.raises(Exception) is shorthand in crypto failure tests
    "F841",   # tests often bind for readability even when value is unused
    "RUF012", # mutable class defaults are fine for test recorders
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: tests that hit a real database or external service",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["agno.*", "mcp.*", "phoenix.*", "openinference.*"]
ignore_missing_imports = true
